# cargo-llvmcov

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: check.yml  tests.yml
src/: main.rs  tests.rs
tests/: text.rs
tests/example/: Cargo.toml
tests/example/src/: lib.rs
