[package]
name = "cargo-llvmcov"
version = "0.1.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
cargo_metadata = "0.11"
cargo-binutils = "0.3"
clap = "3.0.0-beta.2"
opener = "0.4"
log = "0.4"
stderrlog = "0.5"
glob = "0.3"
which = "4.0"

[dev-dependencies]
logtest = "2.0"
once_cell = "1.5"
mktemp = "0.4"
